# sqli

./: AGENTS.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: ci.yml
examples/: docker-compose.yml  sqli.toml
examples/init/: init-clickhouse.sql  init-mysql.sql  init-postgres.sql  init-scylla.cql
src/: app.rs  cassandra.rs  clickhouse.rs  completion.rs  config.rs  controller.rs  db.rs  debug.rs  editor.rs  error.rs  format.rs  main.rs  mysql.rs  postgres.rs  result_table.rs  sqlite.rs  ssh_sqlite.rs  templates.rs
src/app/: mod.rs  popups.rs  theme.rs  widgets.rs
src/controller/: completion.rs  database.rs  input.rs  mod.rs  navigation.rs  templates.rs
