[package]
name = "sqli"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
tui-textarea = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
scylla = "0.14"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
